# WhisprBar

./: .gitignore  .pr-description.md  .sync_c3d4e5f6a7b8.db-shm  .sync_c3d4e5f6a7b8.db-wal  BUGS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GOAL.md  INSTALL.md  LICENSE  README.md  SETUP.md  WORKLOG.md  install.sh  mock_tray_menu.py  pyproject.toml  pytest.ini  requirements.txt  test_no_duplicate_processing.py  test_signal_handling.py  test_thread_safety.py  test_unicode_capitalization.py  update.sh  whisprbar-launcher.sh  whisprbar.desktop  whisprbar.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: README.md  setup-new-pc.md
docs/bugs/: README.md
docs/dev-artifacts/: README.md
docs/fixes/: FIXES-COMPLETED.md
tests/: __init__.py  conftest.py  test_app.py  test_audio.py  test_bug2_detailed.py  test_bug3_detailed.py  test_bugs.py  test_cfg_reference.py  test_cli_entrypoints.py  test_config.py  test_config_types.py  test_debug_backend.py  test_deepgram.py  test_events.py  test_flow_commands.py  test_flow_context.py  test_flow_dictionary.py  test_flow_formatting.py  test_flow_learning.py  test_flow_models.py  test_flow_pipeline.py  test_flow_profiles.py  test_flow_rewrite.py  test_flow_snippets.py  test_flow_stats.py  test_hotkey_runtime.py  test_hotkeys.py  test_i18n.py  test_learning_inbox.py  test_main_audio_feedback.py  test_main_flow_actions.py  test_main_flow_integration.py  test_main_hotkeys.py  test_paste.py  test_project_metadata.py  test_recording_indicator_flow.py  test_scratchpad_storage.py  test_settings_webview.py  test_state.py  test_transcript_store.py  (+4 more)
tests/functional/: check_api_key.py  check_audio.py  check_config.py  check_dependencies.py  check_no_duplicate_processing.py  check_session_diagnostics.py  check_signal_handling.py  check_thread_safety.py  check_unicode_capitalization.py  run_all_checks.sh
whisprbar/: __init__.py  __main__.py  app.py  audio.py  config.py  config_types.py  events.py  hotkey_actions.py  hotkey_runtime.py  hotkeys.py  i18n.py  main.py  paste.py  state.py  transcript_store.py  transcription.py  tray.py  ui.py  ui_hotkeys.py  utils.py
whisprbar/audio/: __init__.py  vad.py  (+2 more)
(+92 files in other folders)
